--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
               <a class="nav-link active" aria-current="page" href="index.html">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="about.html">Features</a>
+              <a class="nav-link" href="about.html">Abouts</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">Pricing</a>
+              <a class="nav-link" href="contact.html">Contact</a>
             </li>
           </ul>
         </div>
