--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img src="img/mountains.png" class="d-block w-100" alt="mountains">
+      <img src="img/1.jpg" class="d-block w-100" alt="mountains"  height="950px" width="800px">
     </div>
     <div class="carousel-item">
-      <img src="img/red.png" class="d-block w-100" alt="red">
+      <img src="img/2.jpg" class="d-block w-100" alt="red" height="750px" width="1000px">
     </div>
     <div class="carousel-item">
-      <img src="img/snow.png" class="d-block w-100" alt="snow">
+      <img src="img/3.jpg" class="d-block w-100" alt="snow"  height="750px" width="1000px">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
