--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-
+ <link rel="stylesheet" href="styles.css">
     <title>Carter's Website</title>
   </head>
   <body>
@@ -68,36 +68,83 @@
   <div class="row">
     <div class="col-md-4">
       <div class="card" style="width: 18rem;">
-        <img src="img/mountains.png" class="card-img-top" alt="mountains">
+        <img src="img/1.jpg" class="card-img-top" alt="mountains">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title">Family</h5>
+          <p class="card-text">big bro just garduated im next</p>
           <a href="#" class="btn btn-primary">Link to somewhere</a>
         </div>
       </div>
     </div>
     <div class="col-md-4">
       <div class="card" style="width: 18rem;">
-        <img src="img/red.png" class="card-img-top" alt="red">
+        <img src="img/2.jpg" class="card-img-top" alt="red">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title">Family</h5>
+          <p class="card-text">Family is a key to having a long happy life </p>
           <a href="#" class="btn btn-primary">Link to somewhere</a>
         </div>
       </div>
     </div>
     <div class="col-md-4">
       <div class="card" style="width: 18rem;">
-        <img src="img/snow.png" class="card-img-top" alt="snow">
+        <img src="img/3.jpg" class="card-img-top" alt="snow">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <h5 class="card-title">Family</h5>
+          <p class="card-text">11 years ago today</p>
           <a href="#" class="btn btn-primary">Link to somewhere</a>
         </div>
       </div>
     </div>
   </div>
 </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+<footer class="site-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-sm-12 col-md-6">
+        <h6>About</h6>
+        <p class="text-justify">this is all about me </p>
+      </div>
+
+      <div class="col-xs-6 col-md-3">
+        <h6>Hard work wins when talent doesnt work hard</h6>
+        <ul class="footer-links">
+          <li>be great </li>
+          <li><a href="index.html">index</a></li>
+          <li><a href="https://cnoble23.github.io/Coding-1-Final-S2022/">live link</a> </li>
+      </div>
+
+      <div class="col-xs-6 col-md-3">
+        <h6>Basic info</h6>
+        <ul class="footer-links">
+          <li>contact</li>
+          <li>contribute</li>
+          <li>death</li>
+          <li>taxes</li>
+         
+        </ul>
+      </div>
+    </div>
+   
+ 
+
+      
+    </div>
+  </div>
+</footer>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
